Correctly align dates with schedule rows and temporarily hide sticky header Change border colour of 'today' rows Replace ajax spinner in schedule view with svg version if svg and smil are supported

--- a/app/assets/stylesheets/global.css.scss
+++ b/app/assets/stylesheets/global.css.scss
@@ -249,3 +249,7 @@ div.entity-images-container {
     }
   }
 }
+
+html.svg.smil .ajax-wait {
+  background-image: image-url('ajax_wait.svg') !important;
+}
